--- a/assets/style.css
+++ b/assets/style.css
@@ -1,15 +1,10 @@
 html {
-    height: 100%;
-    width: 100%;
     font-family: 'Roboto', 'Open Sans', 'Helvetica', 'Arial', sans-serif;
-    box-sizing: border-box;
 }
 
 body {
     background: mediumaquamarine;
-    display: grid;
-    height: 100%;
-    width: 100%;
+    padding: 10px 0;
 }
 
 h3 {
@@ -17,50 +12,52 @@ h3 {
     padding: 0;
 }
 
-#grid-container {
+#css-grid-playground {
     display: grid;
-    grid-template-rows: auto 1fr auto;
-    align-self: center;
-    justify-self: center;
-    width: 650px;
+    grid-gap: 25px;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+        "grid-settings       grid-display"
+        "grid-item-settings  grid-display";
+    height: 90vh;
+    padding: 25px;
+    overflow: auto;
 }
 
-#grid-prototype {
-    background: #555;
-    padding: 5px;
+#grid-settings {
+    background: steelblue;
+    grid-area: grid-settings;
     display: grid;
-    height: 500px;
-    border: 3px solid black;
+    grid-gap: 20px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding: 15px;
+}
+
+#grid-item-settings {
+    grid-area: grid-item-settings;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 20px;
+    background: sandybrown;
+    padding: 15px;
+}
+
+#grid-display {
+    display: grid;
+    grid-area: grid-display;
+    background: black;
+    padding: 5px;
 }
 
 .grid-item {
     background: azure;
     border: 5px solid aquamarine;
+    border-radius: 5px;
     color: cornflowerblue;
     font-size: 2em;
     cursor: pointer;
-}
-
-header {
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    background: #ccc;
-    padding: 15px;
-    border-top: 3px solid black;
-    border-left: 3px solid black;
-    border-right: 3px solid black;
-}
-
-footer {
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(6, 1fr);
-    background: #bbb;
-    padding: 15px;
-    border-bottom: 3px solid black;
-    border-left: 3px solid black;
-    border-right: 3px solid black;
 }
 
 label {
@@ -74,5 +71,5 @@ input {
     background: rgba(255, 255, 255, 0.75);
     border: 1px solid black;
     padding: 5px;
-    max-width: 75px;
+    max-width: 100px;
 }
