--- a/assets/style.css
+++ b/assets/style.css
@@ -1,39 +1,46 @@
 html {
-    font-family: 'Roboto', 'Open Sans', 'Helvetica', 'Arial', sans-serif;
+    font-family: 'Source Sans Pro', 'Roboto', 'Open Sans', 'Helvetica', 'Arial', sans-serif;
 }
 
 body {
-    background: #444;
+    background: rgb(102, 127, 150);
     padding: 10px 0;
 }
 
 h3 {
     margin: 0;
     padding: 0;
+    color: rgb(79, 113, 145);
+}
+
+.box-styles {
+    background: #ddd;
+    border: 3px dashed rgb(141, 169, 219);
+    box-shadow: 0px 10px 15px rgb(79, 113, 145);
+    padding: 15px;
 }
 
 #css-grid-playground {
     display: grid;
     grid-gap: 25px;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 90px 1fr 1fr;
     grid-template-areas:
-        "grid-settings       grid-display"
-        "grid-item-settings  grid-display";
+        "grid-settings          grid-settings"
+        "grid-column-settings   grid-display"
+        "grid-item-settings     grid-display";
     height: 90vh;
     padding: 25px;
     overflow: auto;
 }
 
 #grid-settings {
-    background: #eee;
-    border: 5px solid #aaa;
-    grid-area: grid-settings;
     display: grid;
+    grid-area: grid-settings;
     grid-gap: 20px;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 25px 75px 75px;
-    padding: 15px;
+    grid-template-columns: auto repeat(10, 1fr);
+    align-items: center;
+    justify-items: center;
 }
 
 #grid-settings > h3 {
@@ -41,15 +48,16 @@ h3 {
     grid-column-end: 5;
 }
 
+#grid-column-settings {
+    grid-area: grid-column-settings;
+}
+
 #grid-item-settings {
-    grid-area: grid-item-settings;
     display: grid;
+    grid-area: grid-item-settings;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 25px 75px 75px;
+    grid-template-rows: 25px 50px 50px;
     grid-gap: 20px;
-    background: #ccc;
-    border: 5px solid #999;
-    padding: 15px;
 }
 
 #grid-item-settings > h3 {
@@ -59,9 +67,6 @@ h3 {
 #grid-display {
     display: grid;
     grid-area: grid-display;
-    background: #ddd;
-    border: 5px dashed #ccc;
-    padding: 15px;
 }
 
 .grid-item {
@@ -75,7 +80,7 @@ h3 {
 
 label {
     font-size: 0.8em;
-    color: #444;
+    color: rgb(79, 113, 145);
     display: block;
     margin-bottom: 5px;
 }
@@ -83,7 +88,7 @@ label {
 input {
     border-radius: 3px;
     background: rgba(255, 255, 255, 0.75);
-    border: 1px solid black;
+    border: 1px solid rgb(79, 113, 145);
     padding: 5px;
     max-width: 100px;
 }
