--- a/style.css
+++ b/style.css
@@ -8,8 +8,23 @@ body {
 
 h3 {
     margin: 0;
-    padding: 0;
     color: rgb(79, 113, 145);
+}
+
+label {
+    font-size: 0.8em;
+    color: rgb(79, 113, 145);
+    display: block;
+    margin-bottom: 5px;
+}
+
+input {
+    width: 95%;
+    height: 15px;
+    padding: 5px;
+    border-radius: 3px;
+    background: rgba(255, 255, 255, 0.75);
+    border: 1px solid rgb(79, 113, 145);
 }
 
 .box-styles {
@@ -55,7 +70,7 @@ h3 {
     display: grid;
     grid-area: grid-column-settings;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 40px 25px 35px 1fr;
+    grid-template-rows: 40px 25px 30px 1fr;
 }
 
 #grid-column-settings > h3, label {
@@ -90,9 +105,23 @@ h3 {
     grid-column-end: 5;
 }
 
+#empty-squre {
+    display: 'grid';
+    grid-area: 'empty';
+}
+
 #grid-display {
     display: grid;
     grid-area: grid-display;
+}
+
+.grid-item {
+    background: rgb(206, 213, 226);
+    border: 1px dashed cornflowerblue;
+    padding: 5px;
+    color: rgb(144, 152, 168);
+    font-size: 2em;
+    cursor: pointer;
 }
 
 #column-list {
@@ -109,13 +138,18 @@ h3 {
     justify-items: center;
 }
 
-.grid-item {
-    background: rgb(206, 213, 226);
-    border: 1px dashed cornflowerblue;
-    padding: 5px;
-    color: rgb(144, 152, 168);
-    font-size: 2em;
+.list-item-button {
+    margin: 0;
+    text-align: center;
+    text-decoration: underline;
     cursor: pointer;
+    font-size: 1.2em;
+    font-weight: 600;
+    color: rgb(79, 113, 145);
+}
+
+.list-item-button:hover {
+    color: rgb(130, 165, 197);
 }
 
 #contact-info {
@@ -132,34 +166,4 @@ h3 {
 #contact-info > p > a {
     color: white;
     font-weight: 600;
-}
-
-
-label {
-    font-size: 0.8em;
-    color: rgb(79, 113, 145);
-    display: block;
-    margin-bottom: 5px;
-}
-
-input {
-    border-radius: 3px;
-    background: rgba(255, 255, 255, 0.75);
-    border: 1px solid rgb(79, 113, 145);
-    padding: 5px;
-    width: 95%;
-}
-
-.list-item-button {
-    margin: 0;
-    text-align: center;
-    text-decoration: underline;
-    cursor: pointer;
-    font-size: 1.2em;
-    font-weight: 600;
-    color: rgb(79, 113, 145);
-}
-
-.list-item-button:hover {
-    color: rgb(130, 165, 197);
 }
